--- a/src/test-frontend/src/app/app.component.html
+++ b/src/test-frontend/src/app/app.component.html
@@ -1,7 +1,6 @@
-<h1>HALLO ZUSAMMEN!!!</h1>
-
-<p>Hallo nochmal!</p>
-
-<li *ngFor="let user of users">
-  <ul>{{user}}</ul>
-</li>
+<div class="header">
+  <app-menu-bar title="AMAZING Portfolio" [menuBarItems]="menuItems" />
+</div>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
