Added some new table and started integration of a basic form

--- a/src/test-frontend/src/app/views/impressum/impressum.component.html
+++ b/src/test-frontend/src/app/views/impressum/impressum.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span class="header-title" [routerLink]="'/overview'">Impressum</span>
+  <span class="header-title" [routerLink]="'/impressum'">Impressum</span>
   <span class="spacer"></span>
 </mat-toolbar>
 
