--- a/src/test-frontend/src/app/shared/components/menu-bar/menu-bar.component.html
+++ b/src/test-frontend/src/app/shared/components/menu-bar/menu-bar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary" class="shadow">
-  <span class="header-title" [routerLink]="'/overview'">{{ title }}</span>
+  <span class="header-title" [routerLink]="'/home'">{{ title }}</span>
   <span class="spacer"></span>
+
   <div *ngFor="let n of menuBarItems" class="navitems-container">
     <button
       mat-button
