Added aux-routes, message detail dialog with message-form

--- a/src/test-frontend/src/app/app.component.html
+++ b/src/test-frontend/src/app/app.component.html
@@ -2,5 +2,6 @@
   <app-menu-bar title="AMAZING Portfolio" [menuBarItems]="menuItems" />
 </div>
 <div class="content">
+  <router-outlet name="popup"></router-outlet>
   <router-outlet></router-outlet>
 </div>
