Added basic auth functionality to frontend

--- a/src/test-frontend/src/app/shared/components/four-zero-four/four-zero-four.component.html
+++ b/src/test-frontend/src/app/shared/components/four-zero-four/four-zero-four.component.html
@@ -5,4 +5,5 @@
   <p>
     The page you are looking for might be under construction or does not exist.
   </p>
+  <a routerLink="/">Go to LOGIN</a>
 </div>
