--- a/src/test-frontend/src/app/shared/components/menu-bar/menu-bar.component.html
+++ b/src/test-frontend/src/app/shared/components/menu-bar/menu-bar.component.html
@@ -2,14 +2,27 @@
   <span class="header-title" [routerLink]="'/home'">{{ title }}</span>
   <span class="spacer"></span>
 
-  <div *ngFor="let n of menuBarItems" class="navitems-container">
-    <button
-      mat-button
-      color="accent"
-      (click)="routeTo(n.routePath)"
-      [matTooltip]="n.name"
-    >
-      {{ n.name }}
-    </button>
+  <div *ngFor="let item of menuBarItems" class="navitems-container">
+    <ng-container *ngIf="item.visible | async as visibleItem">
+      <button
+        *ngIf="!item.highlighted && visibleItem"
+        mat-button
+        color="accent"
+        (click)="routeTo(item.routePath)"
+        [matTooltip]="item.name"
+      >
+        {{ item.name }}
+      </button>
+
+      <button
+        *ngIf="item.highlighted && visibleItem"
+        mat-flat-button
+        [color]="item.name === 'Login' ? 'accent' : 'warn'"
+        (click)="routeTo(item.routePath)"
+        [matTooltip]="item.name"
+      >
+        {{ item.name }}
+      </button>
+    </ng-container>
   </div>
 </mat-toolbar>
